[gd_scene load_steps=3 format=3 uid="uid://0y4q527mtlre"]

[ext_resource type="Script" path="res://Actors/Damage/damage_receiver.gd" id="1_iqqwm"]

[sub_resource type="BoxShape3D" id="BoxShape3D_xshwi"]

[node name="DamageReceiver" type="Area3D"]
script = ExtResource("1_iqqwm")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_xshwi")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
